fix(problem): fix problem view samples horizontal overflow

--- a/src/pages/problem/view/ProblemViewPage.module.less
+++ b/src/pages/problem/view/ProblemViewPage.module.less
@@ -124,6 +124,7 @@
 .sampleDataSegment {
   flex-grow: 1;
   margin-top: 0 !important;
+  overflow-x: overlay;
 }
 
 .sampleDataPre {
